--- a/client/css/bower.css
+++ b/client/css/bower.css
@@ -1569,3 +1569,156 @@ body {
 .btn {
   margin-bottom: 5px;
 }
+
+.userimage {
+  background-size: 100% !important;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0;
+}
+
+.btn-group {
+  width: 90%;
+  margin: 0 auto;
+}
+
+/*.languagetext {
+  display: block;
+  margin-top: 20px;
+  text-align: center;
+}
+*/
+button.btn.btn-primary.dropdown-toggle {
+  display: block;
+  margin: auto;
+  border-radius: 4px;
+  text-align: center;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.usermatches {
+  background-color: whitesmoke;
+}
+
+.matchphotos {
+  width: 100px;
+  height: 100px;
+}
+
+/*.matchphotos:nth-of-type(1) {
+  margin-top: 15px;
+}*/
+
+/*span.ng-binding.matchtext {
+  position: absolute;
+  padding-top: 13px;
+  padding-left: 1em;
+}*/
+.connectButton {
+  margin-top: 10px;
+  padding: 5px 10px;
+}
+
+.caret {
+  margin-left: 1em !important;
+}
+
+.custom-dropdown--large {
+    font-size: 1.5em;
+}
+
+.custom-dropdown--small {
+    font-size: .7em;
+}
+
+.custom-dropdown__select{
+    font-size: inherit; /* inherit size from .custom-dropdown */
+    padding: .5em; /* add some space*/
+    margin: 0; /* remove default margins */
+}
+
+.custom-dropdown__select--white {
+    background-color: #fff;
+    color: #444;    
+}
+
+@supports (pointer-events: none) and
+      ((-webkit-appearance: none) or
+      (-moz-appearance: none) or
+      (appearance: none)) {
+
+    .custom-dropdown {
+        position: relative;
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 15px;
+    }
+
+    .custom-dropdown__select {
+        padding-right: 2.5em; /* accommodate with the pseudo elements for the dropdown arrow */
+        border: 0;
+        border-radius: 3px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;    
+    }
+
+    .custom-dropdown::before,
+    .custom-dropdown::after {
+        content: "";
+        position: absolute;
+        pointer-events: none;
+    }
+
+    .custom-dropdown::after { /*  Custom dropdown arrow */
+        content: "\25BC";
+        height: 1em;
+        font-size: .625em;
+        line-height: 1;
+        right: 1.2em;
+        top: 50%; margin-top: -.5em;
+    }
+
+    .custom-dropdown::before { /*  Custom dropdown arrow cover */
+        width: 2em;
+        right: 0; top: 0; bottom: 0;
+        border-radius: 0 3px 3px 0;
+    }
+
+    .custom-dropdown__select[disabled] {
+        color: rgba(0,0,0,.3);
+    }
+
+    .custom-dropdown.custom-dropdown--disabled::after {
+        color: rgba(0,0,0,.1);
+    }
+
+    /* White dropdown style */
+    .custom-dropdown--white::before {
+        background-color: #fff;
+        border-left: 1px solid rgba(0,0,0,.1);
+    }
+
+    .custom-dropdown--white::after {
+        color: rgba(0,0,0,.9);
+    }
+
+    /* FF only temp fix */
+    @-moz-document url-prefix() {
+        .custom-dropdown__select             { padding-right: .9em }
+        .custom-dropdown--large .custom-dropdown__select { padding-right: 1.3em }
+        .custom-dropdown--small .custom-dropdown__select { padding-right: .5em }
+    }
+}
+
+.submitDash {
+  margin-top: 15px;
+  padding: 5px 10px;
+}
+
+.languageChange {
+  margin-top: 30px;
+}
